Fixed config saving/loading Fixed compatibility with smooth scroll mod Excluded server-enforced resourcepack Added README.md